--- a/_posts/testblogpost.Rmd
+++ b/_posts/testblogpost.Rmd
@@ -2,7 +2,7 @@
 title: "Test Blog Post"
 author: "Caleb Griffin"
 date: "7/8/2020"
-output: html_document
+output: md_document
 ---
 
 ```{r setup, include=FALSE}
