--- a/_posts/testblogpost.Rmd
+++ b/_posts/testblogpost.Rmd
@@ -2,7 +2,8 @@
 title: "Test Blog Post"
 author: "Caleb Griffin"
 date: "7/8/2020"
-output: md_document
+permalink: /posts/2020/07/blog-post-1/
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
